[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpt-oss-server"
version = "0.1.0"
description = "FastAPI OpenAI-compatible server for GPT-OSS models on MLX."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "huggingface-hub>=1.5",
    "mlx-lm>=0.31",
    "openai-harmony>=0.0.8",
    "pydantic>=2.8",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
gpt-oss-server = "gpt_oss_server.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
